# chatai

./: .disabled.pre-commit-config.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_MODES.md  Dockerfile.backend  FLOW_CHAT_TESTING_SUMMARY.md  FLOW_LANGUAGE.md  Procfile  README.md  build-frontend.sh  docker-compose.yml  requirements.txt
backend/: .gitignore  .pre-commit-config.yaml  .whatsapp_cli_config.json  ADMIN_COMMUNICATION_STYLE_PIPELINE.md  ADMIN_EDIT_FLOW_DIAGRAM.md  ADMIN_EDIT_FLOW_PIPELINE.md  ADMIN_FLOW_TESTING_GUIDE.md  ADMIN_PROMPT_FIX_COMPLETE.md  ADMIN_STYLE_IMPLEMENTATION.md  ADMIN_STYLE_TEST_GUIDE.md  ADMIN_SYSTEMS_COMPARISON.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CRITICAL_TYPE_ANNOTATIONS.md  DEBOUNCING_IMPLEMENTATION_SUMMARY.md  DEBOUNCING_SYSTEM.md  DELAYED_ESCALATION_CLEARING.md  Dockerfile  EDIT_FLOW_OUTPUT_PIPELINE.md  FLOW_CHAT_AGENT_CONTEXT_ENHANCEMENT.md  FLOW_CHAT_AGENT_RUNTIME_CONTEXT_ADDED.md  FLOW_CHAT_TESTING.md  GPT5_REASONING_BACKEND.md  INTEGRATION_TESTING_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  INTELLIGENT_CHUNKING_FINDINGS.md  LIVE_FLOW_EDITING_SYSTEM.md  LLM_INTEGRATION_TESTS_COMPLETE.md  MAKEFILE_VALIDATION.md  Makefile  PIPELINE_TYPE_FLOW.md  PREVENTING_RUNTIME_ERRORS.md  PROMPT_AMBIGUITY_ANALYSIS.md  PROMPT_AMBIGUITY_FIX_SUMMARY.md  PROMPT_FIX_PROPOSAL.md  RAG_SCRIPTS_README.md  RAG_SETUP.md  RAG_SYSTEM_REPORT.md  README.md  REFACTORING_SUMMARY.md  (+72 more)
backend/alembic/: env.py
backend/alembic/versions/: 0ceb635e0117_optimize_tenant_queries_indexes.py  190180b9a510_drop_thought_tracing_tables_using_.py  1e2c0e3c4626_create_handoffrequest_table_with_.py  20250124_add_flow_chat_session_table.py  20250831_add_training_mode.py  346d29e0c1be_add_channel_id_to_conversation_traces.py  628074c68476_add_timing_configuration_to_tenant_.py  8405d74fc303_add_handoffrequest_table_for_tracking_.py  a5c8010a73bf_add_agent_thought_tracing_tables.py  f4db6466c728_add_admin_phone_numbers_remove_training_.py
backend/app/: conversation.py  dev_config.py  main.py  router.py  settings.py
backend/app/agents/: base.py  flow_chat_agent.py  flow_chat_agent_v2.py  flow_modification_tools.py
backend/app/agents/common/: policy.py  (+5 more)
backend/app/api/: admin.py  channels.py  chats.py  documents.py  flow_chat.py  flows.py  handoffs.py  tenant_admin.py  tenants.py  testdata.py
backend/app/config/: loader.py  provider.py
backend/app/core/: agent_base.py  agent_factory.py  app_context.py  channel_adapter.py  chat_model_init.py  conversation.py  flow_processor.py  flow_request.py  flow_response.py  langchain_adapter.py  langfuse_clean.py  langfuse_client.py  langfuse_client_v3.py  langfuse_decorators.py  llm.py  logging.py  message_metadata.py  messages.py  naturalize.py  personality_presets.py  prompt_logger.py  prompts.py  redis_keys.py  router.py  session.py  state.py  thought_tracer.py  tool_schemas.py  tools.py  types.py
backend/app/db/: models.py  repository.py  session.py  types.py
backend/app/flow_core/: ARCHITECTURE.md  IMPROVEMENTS.md  README.md  __init__.py  builders.py  cli.py  cli_async.py  cli_unified.py  compiler.py  config_types.py  constants.py  engine.py  engine_simple.py  flow_types.py  guards.py  internal_tools.py  ir.py  langgraph_adapter.py  live_flow_modification_tool.py  llm_responder.py  message_types.py  normalize.py  responders.py  result_types.py  runner.py  runner_simple.py  state.py  tool_schemas.py  tools.py  types.py  whatsapp_cli.py
backend/app/services/: admin_phone_service.py  audio_validation_service.py  chat_service.py  deduplication_service.py  flow_chat_service.py  flow_modification_service.py  flow_session_service.py  handoff_service.py  handoff_types.py  human_handoff.py  message_logging_service.py  processing_cancellation_manager.py  rate_limiter.py  session_manager.py  speech_to_text_service.py  tenant_config_service.py  tenant_service.py  training_mode_service.py
backend/app/utils/: graphviz.py
backend/app/whatsapp/: adapter.py  message_processor.py  message_processor_clean.py  message_types.py  router.py  thread_status_updater.py  training_handler.py  twilio.py  twilio_adapter.py  webhook.py  webhook_db_handler.py  whatsapp_api_adapter.py
backend/playground/: english_course_sales_flow.json  flow_agendamento_consulta.json  flow_example.json  flow_example_2.json  fluxo_luminarias.json  sales_paths_example.html  sales_paths_example.json  sales_paths_example.kroki.html  sales_qualifier_question_graph_basic.html  sales_qualifier_question_graph_basic.json  sales_qualifier_question_graph_basic.kroki.html  sales_qualifier_question_graph_full.json
backend/playground/documents/: README.md  build_pdfs.py  catalogo_de_produtos_led.md  catalogo_luminarias_desordenado.md  desafios_por_ambiente_led.md  faq_tecnico_led.md  faq_vendas_led.md  implementacao_por_ambiente_led.md  manual_instalacao_confuso.md  orcamento_ginasio.md
backend/scripts/: check_types.sh  prune_langfuse_logs.py  test_llm_integration.sh  test_types.py  type_check.sh  validate_before_run.sh
backend/tests/: conftest.py  test_admin_controller_integration.py  test_agent_factory.py  test_clear_chat_functionality.py  test_comprehensive_dentist_flow.py  test_config.py  test_conversation.py  test_end_to_end_flow_api.py  test_enhanced_flow_chat_agent.py  test_flow_chat_agent.py  test_flow_chat_response_structure.py  test_flow_core.py  test_flow_core_subgraphs.py  test_flow_integration.py  test_flow_modification_tools.py  test_flow_path_finding.py  test_health.py  test_integration_llm_flow.py  test_integration_specific_tools.py  test_new_webhook_architecture.py  test_partial_answer_flow.py  test_path_correction.py  test_questionnaire_agent.py  test_rate_limit_and_truncation.py  test_rate_limit_and_truncation_updated.py  test_redis_key_consistency.py  test_refactored_flow_system.py  test_training_mode.py  test_webhook.py  test_whatsapp_simulated_flow.py  test_whatsapp_simulated_flow_updated.py  webhook_test_utils.py
backend/tests/fixtures/: dentist_flow.json
backend/tests/integration/: test_admin_live_editing.py  whatsapp_cli_admin_tester.py
(+126 files in other folders)
