[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatai-backend"
version = "0.1.0"
description = "FastAPI webhook for Twilio WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["fastapi", "twilio", "whatsapp", "webhook"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "pydantic-settings",
  "twilio",
  "python-multipart",
  "langchain>=0.3.0",
  "langchain-google-genai>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
  "pytest",
  "httpx",
  "mypy",
  "ruff",
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ANN"]

#[tool.ruff.lint.flake8-annotations]
#allow-star-arg-any = false
#ignore-fully-untyped = false
